--- a/sample/src/PaperScraper/PaperScraper.fsproj
+++ b/sample/src/PaperScraper/PaperScraper.fsproj
@@ -5,13 +5,13 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>a1ce6ef9-4c01-45b9-a237-56bab673a335</ProjectGuid>
+    <ProjectGuid>38cf1ad1-7678-4e89-8859-19afaf68fb42</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>PaperTrail</RootNamespace>
-    <AssemblyName>PaperTrail</AssemblyName>
+    <RootNamespace>PaperScraper</RootNamespace>
+    <AssemblyName>PaperScraper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
-    <Name>PaperTrail</Name>
+    <Name>PaperScraper</Name>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -31,7 +31,7 @@
     <OutputPath>.\bin\Release</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>.\bin\Release\PaperTrail.xml</DocumentationFile>
+    <DocumentationFile>.\bin\Release\PaperScraper.xml</DocumentationFile>
     <OtherFlags>--warnon:1182</OtherFlags>
   </PropertyGroup>
   <ItemGroup>
