--- a/sample/tests/PaperScraper.Tests/PaperScraper.Tests.fsproj
+++ b/sample/tests/PaperScraper.Tests/PaperScraper.Tests.fsproj
@@ -5,13 +5,13 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>d30a18df-e2fe-4491-a111-24aa9f829dd2</ProjectGuid>
+    <ProjectGuid>ffa6261f-f712-43cc-9f60-281aff46e6de</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>PaperTrail.Tests</RootNamespace>
-    <AssemblyName>PaperTrail.Tests</AssemblyName>
+    <RootNamespace>PaperScraper.Tests</RootNamespace>
+    <AssemblyName>PaperScraper.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
-    <Name>PaperTrail.Tests</Name>
+    <Name>PaperScraper.Tests</Name>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
   </PropertyGroup>
@@ -68,9 +68,9 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PaperTrail\PaperTrail.fsproj">
-      <Name>PaperTrail</Name>
-      <Project>{a1ce6ef9-4c01-45b9-a237-56bab673a335}</Project>
+    <ProjectReference Include="..\..\src\PaperScraper\PaperScraper.fsproj">
+      <Name>PaperScraper</Name>
+      <Project>{38cf1ad1-7678-4e89-8859-19afaf68fb42}</Project>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
