fixing FSharp.Core issues

--- a/sample/src/PaperScraper/PaperScraper.fsproj
+++ b/sample/src/PaperScraper/PaperScraper.fsproj
@@ -6,13 +6,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>38cf1ad1-7678-4e89-8859-19afaf68fb42</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>PaperScraper</RootNamespace>
     <AssemblyName>PaperScraper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>PaperScraper</Name>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,6 +22,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <OtherFlags>--warnon:1182</OtherFlags>
+    <ErrorReport>prompt</ErrorReport>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,11 +34,14 @@
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>.\bin\Release\PaperScraper.xml</DocumentationFile>
     <OtherFlags>--warnon:1182</OtherFlags>
+    <ErrorReport>prompt</ErrorReport>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>False</Private>
+      <Private>True</Private>
+      <HintPath>$(TargetFSharpCorePath)</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
